src/routes/game/components/elements/cardPortal/CardPortal.module.css
.popUpContainer {
  position: fixed;
  z-index: 10002;
  min-height: calc(53vh - (1.5 - var(--hover-img-scale)) * 20vh);
  height: calc(55vh * var(--hover-img-scale));
}

.popUp {
  padding: 1vh;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
}

.defaultPos {
  right: 200px;
  top: 10vh;
}

.img {
  height: calc(50vh * var(--hover-img-scale));
  display: block;
  max-width: 100%;
  max-height: 100%;
  border-radius: 5%;
}

.popUpInside {
  z-index: 111;
}

.doubleFacedCard {
  position: absolute;
  left: calc(-38vh * var(--hover-img-scale));
}

@media (orientation: portrait) {
  .popUpContainer {
    top: 50% !important;
    left: 50% !important;
    bottom: auto !important;
    right: auto !important;
    transform: translate(-50%, -50%);
    height: 90dvh !important;
    width: 90vw;
    display: flex;
    align-items: center;
    justify-content: center;
    pointer-events: none;
    background: url('../../../../../img/backgrounds/transparent-card.png') center / contain no-repeat;
  }

  .img {
    height: auto;
    max-height: 75dvh;
    max-width: 85vw;
    width: auto;
  }

  .doubleFacedCard {
    position: static;
  }
}

